D26-Networking/pods.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  namespace: policy-demo
  labels:
    app: nginx
spec:
  containers:
  - name: nginx
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: busybox
  namespace: policy-demo
  labels:
    app: busybox
spec:
  containers:
  - name: busybox
    image: busybox
    command: ["sleep", "3600"]
